@@ -49,8 +49,8 @@
         <version>1.0.12</version>
     </parent>
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <!--  default URL properties -->
         <ddf.scm.connection.url />
         <snapshots.repository.url />
@@ -110,21 +110,21 @@
         <dom4j.bundle.version>2.1.3_1</dom4j.bundle.version>
 
         <!--Test properties-->
-        <byte-buddy.version>1.12.18</byte-buddy.version>
+        <byte-buddy.version>1.17.5</byte-buddy.version>
         <hamcrest-all.servicemix.version>1.3_1</hamcrest-all.servicemix.version>
         <hamcrest-all.version>1.3</hamcrest-all.version>
         <hamcrest-junit.version>2.0.0.0</hamcrest-junit.version>
         <hamcrest-optional.version>1.0</hamcrest-optional.version>
         <jsonassert.version>1.5.0</jsonassert.version>
-        <spock.version>2.3-groovy-3.0</spock.version>
-        <mockito.version>4.9.0</mockito.version>
+        <spock.version>2.4-M6-groovy-4.0</spock.version>
+        <mockito.version>5.17.0</mockito.version>
         <pax.exam.version>4.13.5</pax.exam.version>
         <pax.logging.version>2.2.7</pax.logging.version>
         <pax.url.version>2.6.14</pax.url.version>
         <pax.web.version>8.0.27</pax.web.version>
-        <restito.version>1.1.0</restito.version>
-        <restassured.version>3.3.0</restassured.version>
-        <groovy.version>3.0.12</groovy.version>
+        <restito.version>1.1.2</restito.version>
+        <restassured.version>5.5.0</restassured.version>
+        <groovy.version>4.0.23</groovy.version>
         <xmlunit.version>1.6</xmlunit.version>
         <xmlunit-matchers.version>2.8.2</xmlunit-matchers.version>
 
@@ -133,10 +133,10 @@
         <project.report.output.directory>project-info</project.report.output.directory>
 
         <!--Documentation properties-->
-        <asciidoctor.maven.plugin.version>2.2.5</asciidoctor.maven.plugin.version>
-        <asciidoctorj.diagram.version>2.2.3</asciidoctorj.diagram.version>
+        <asciidoctor.maven.plugin.version>2.2.6</asciidoctor.maven.plugin.version>
+        <asciidoctorj.diagram.version>2.3.1</asciidoctorj.diagram.version>
         <asciidoctorj.version>2.5.7</asciidoctorj.version>
-        <jruby.version>9.2.20.1</jruby.version>
+        <jruby.version>9.4.12.0</jruby.version>
 
         <abdera.osgi.version>1.1.3_2</abdera.osgi.version>
         <abdera.version>1.1.3</abdera.version>
@@ -196,7 +196,7 @@
         <jpeg2000.version>1.3.1_CODICE_3</jpeg2000.version>
         <json-simple.version>1.1.1</json-simple.version>
         <json-smart.version>2.4.8</json-smart.version>
-        <jsoup.version>1.15.3</jsoup.version>
+        <jsoup.version>1.18.3</jsoup.version>
         <jsr305.version>3.0.2</jsr305.version>
         <jsr305.bundle.version>${jsr305.version}_1</jsr305.bundle.version>
         <jsr339-api.bundle.version>2.6.0</jsr339-api.bundle.version>
@@ -211,8 +211,8 @@
         <logback.classic.version>1.2.3</logback.classic.version>
         <logback.version>1.2.3</logback.version>
         <mariadb.version>2.4.1</mariadb.version>
-        <maven.failsafe.version>2.22.2</maven.failsafe.version>
-        <maven.surefire.version>2.22.2</maven.surefire.version>
+        <maven.failsafe.version>3.5.3</maven.failsafe.version>
+        <maven.surefire.version>3.5.3</maven.surefire.version>
         <mime4j.version>0.8.9</mime4j.version>
         <mpegts-streamer.version>0.1.0_2</mpegts-streamer.version>
         <net.minidev.asm.version>1.0.2</net.minidev.asm.version>
@@ -272,7 +272,7 @@
 
         <!-- Command line argument properties for the maven-surefire-plugin -->
         <surefire.argline.append />
-        <surefire.argline>${jacoco.argline} ${surefire.argline.append} -Xmx1024m -Djava.awt.headless=true -noverify --add-opens java.base/java.util=ALL-UNNAMED</surefire.argline>
+        <surefire.argline>${jacoco.argline} ${surefire.argline.append} -Xmx1024m -Djava.awt.headless=true -Djdk.attach.allowAttachSelf=true -noverify --add-opens java.base/java.util=ALL-UNNAMED</surefire.argline>
         <failsafe.argline>${jacoco.argline}</failsafe.argline>
 
         <fabric8.docker.plugin.version>0.36.1</fabric8.docker.plugin.version>
@@ -621,7 +621,7 @@
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.8</version>
+                    <version>0.8.12</version>
                     <dependencies>
                         <dependency>
                             <groupId>org.codice.maven</groupId>
@@ -651,6 +651,7 @@
                             <include>**/*Test.java</include>
                             <include>**/*Spec.class</include>
                         </includes>
+                        <useModulePath>false</useModulePath>
                         <systemPropertyVariables>
                             <org.ops4j.pax.logging.DefaultServiceLog.level>
                                 INFO
@@ -659,8 +660,8 @@
                     </configuration>
                     <dependencies>
                         <dependency>
-                            <groupId>org.apache.maven.surefire</groupId>
-                            <artifactId>surefire-junit47</artifactId>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
                             <version>${maven.surefire.version}</version>
                         </dependency>
                     </dependencies>
@@ -683,8 +684,8 @@
                     </executions>
                     <dependencies>
                         <dependency>
-                            <groupId>org.apache.maven.surefire</groupId>
-                            <artifactId>surefire-junit47</artifactId>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
                             <version>${maven.surefire.version}</version>
                         </dependency>
                     </dependencies>
@@ -723,7 +724,7 @@
                             <path>
                                 <groupId>com.google.errorprone</groupId>
                                 <artifactId>error_prone_core</artifactId>
-                                <version>2.16</version>
+                                <version>2.25.0</version>
                             </path>
                         </annotationProcessorPaths>
                     </configuration>
@@ -901,7 +902,7 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.13.1</version>
+                <version>4.0.1</version>
                 <executions>
                     <execution>
                         <goals>
@@ -1263,22 +1264,24 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
+            <groupId>org.apache.groovy</groupId>
+            <artifactId>groovy</artifactId>
             <version>${groovy.version}</version>
             <type>pom</type>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.spockframework</groupId>
-            <artifactId>spock-junit4</artifactId>
-            <version>${spock.version}</version>
+            <groupId>org.apache.groovy</groupId>
+            <artifactId>groovy-json</artifactId>
+            <version>${groovy.version}</version>
+            <type>pom</type>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-runner</artifactId>
-            <version>1.7.0</version>
+            <groupId>org.apache.groovy</groupId>
+            <artifactId>groovy-xml</artifactId>
+            <version>${groovy.version}</version>
+            <type>pom</type>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -1287,7 +1290,12 @@
             <version>${spock.version}</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>1.12.2</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
@@ -1322,8 +1330,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.12.2</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
